deployment_yml/entry_point_deployment_service.yml
# Defines the pods, resource requests/limits, and probes.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: entry-point
  labels:
    app: entry-point
spec:
  replicas: 1 # Number of replicas - adjust latter after talking to the team
  selector:
    matchLabels:
      app: entry-point
  template:
    metadata:
      labels:
        app: entry-point
    spec:
      containers:
      - name: entry-point

        # If you're using Minikube, you can leave the image: entry-point:latest as it is, but you need to ensure that the image is available to the Minikube cluster. Since Minikube runs a local Kubernetes cluster, it does not automatically have access to Docker images built on your host machine unless you configure it properly.
        # Or just use the image from Docker Hub i think
        image: 4sparkz/entry-point:latest
        imagePullPolicy: Always


        ports:
        - containerPort: 80

        # TODO: Check if this is correct ----------------------------------------

        # Resource Requests and Limits
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "250m"

        # The liveness probe checks if the container is still running and healthy.
        livenessProbe:
          httpGet:
            path: /healthz
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 60

        # The readiness probe checks if the container is ready to serve traffic.
        readinessProbe:
          httpGet:
            path: /readiness
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 60

        # The startup probe checks if the container has started successfully.
        startupProbe:
          httpGet:
            path: /startup
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 60

---

# Service YAML for entry-point
apiVersion: v1
kind: Service
metadata:
  name: entry-point
  labels:
    app: entry-point
spec:
  type: ClusterIP # Internal service type
  selector:
    app: entry-point # Matches the app label in the deployment
  ports:
    - name: http
      protocol: TCP
      port: 80 # Exposed port
      targetPort: 80 # Port on the container
      #nodePort: 30030
