deployment_yml/topics_controller_deployment_service.yml
# Defines the pods, resource requests/limits, and probes.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: topics-controller
  labels:
    app: topics-controller
spec:
  replicas: 1 # Number of replicas - adjust later after talking to the team
  selector:
    matchLabels:
      app: topics-controller
  template:
    metadata:
      labels:
        app: topics-controller
    spec:
      containers:
      - name: topics-controller

        # If you're using Minikube, you can leave the image: topics-controller:latest as it is, but you need to ensure that the image is available to the Minikube cluster. Since Minikube runs a local Kubernetes cluster, it does not automatically have access to Docker images built on your host machine unless you configure it properly.
        # Or just use the image from Docker Hub i think
        image: 4sparkz/topics-controller:latest
        imagePullPolicy: Always

        
        ports:
        - containerPort: 50060

        # TODO: Check if this is correct ----------------------------------------

        # Resource Requests and Limits
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "250m"

        # The liveness probe checks if the container is still running and healthy.
        livenessProbe:
          httpGet:
            path: /topics/healthz
            port: 50060
          initialDelaySeconds: 5
          periodSeconds: 60

        # The readiness probe checks if the container is ready to serve traffic.
        readinessProbe:
          httpGet:
            path: /topics/readiness
            port: 50060
          initialDelaySeconds: 5
          periodSeconds: 60

        # The startup probe checks if the container has started successfully.
        startupProbe:
          httpGet:
            path: /topics/startup
            port: 50060
          initialDelaySeconds: 10
          periodSeconds: 60

---

# Service YAML for topics-controller
apiVersion: v1
kind: Service
metadata:
  name: topics-controller
  labels:
    app: topics-controller
spec:
  type: ClusterIP # Internal service type
  selector:
    app: topics-controller # Matches the app label in the deployment
  ports:
    - name: http
      protocol: TCP
      port: 50060 # Exposed port
      targetPort: 50060 # Port on the container
